--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,15 @@
 <ul class="menu">
 
-    {% for steve in site.data.menu %}
-    {% if steve.subcategories != null %}
-    <li><a href="{{ steve.href }}" class="page-link">{{ steve.title }}</a>
+    {% for category in site.data.menu %}
+    {% if category.subcategories != null %}
+    <li><a href="{{ category.href }}" class="page-link">{{ category.title }}</a>
     <ul class="sub-menu">
-    {% for subcategory in steve.subcategories %}
+    {% for subcategory in category.subcategories %}
     <li><a href="{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
     {% endfor %}
     </ul>
     {% else %}
-     <li><a href="{{ steve.href }}" class="page-link">{{ steve.title }}</a>
+     <li><a href="{{ category.href }}" class="page-link">{{ category.title }}</a>
     {% endif %}
     </li>
     {% endfor %}
