--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -19,7 +19,7 @@
     margin-bottom: 0;
     float: left;
     font-weight: 500;
-		font-family: 'Titillium Web', sans-serif;
+		font-family: 'Gill Sans', sans-serif;
     color: #ffffff;
     &,
     &:visited {
@@ -53,7 +53,7 @@
 	padding: 0;
 	list-style-type: none;
 	text-transform: uppercase;
-		font-family: 'Titillium Web', sans-serif;
+		font-family: 'Gill Sans', sans-serif;
 
 }
 
