--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,7 +5,7 @@
     border-top: 0px solid $grey-color-dark;
 	border-bottom: 4px solid #0099cc;
     min-height: 56px;
-    background: #f66733;
+    background: #0099cc;
     // Positioning context for the mobile navigation icon
     position: relative;
 
